# libxdiff

./: CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.in  makefile.win32
test/: Makefile.in
tools/: Makefile.in
xdiff/: Makefile.in  xdiff.h
