dnl Process this file with autoconf to produce a configure script.
AC_INIT(libxdiff, 0.23)
AM_INIT_AUTOMAKE(libxdiff, 0.23)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_MAKE_SET
AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_PROG_LIBTOOL

CFLAGS="${CFLAGS=}"

dnl Checks for libraries.

dnl Checks for header files.
AC_STDC_HEADERS
AC_CHECK_HEADERS(stdio.h limits.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE
AC_C_VOLATILE
AC_C_CONST
AC_C_BIGENDIAN

dnl Checks for library functions.
AC_CHECK_FUNCS(memset memcmp memchr memcpy strlen malloc free realloc)


AC_OUTPUT(Makefile xdiff/Makefile test/Makefile tools/Makefile man/Makefile)

